--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jade": "~1.11.0",
     "mongoose": "^4.5.0",
     "morgan": "~1.6.1",
+    "node-schedule": "^1.1.1",
     "request": "^2.72.0",
     "serve-favicon": "~2.3.0"
   }
